# picle

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: main.yml
Getting Started/: index.html
api_reference/: index.html
changelog/: index.html
docs/: Getting Started.md  api_reference.md  changelog.md  index.md
docs/features/: chat_interface.md  command_discovery.md  configuration_model.md  dynamic_dictionary_input.md  field_aliases.md  fields_presence.md  filters_and_outputters.md  input_parsing.md  mounting_models_at_runtime.md  multiline_input.md  pipes.md  processors.md  result_specific_outputters.md  shell_commands.md  subshells_and_navigation.md
features/chat_interface/: index.html
features/command_discovery/: index.html
features/configuration_model/: index.html
features/dynamic_dictionary_input/: index.html
features/field_aliases/: index.html
features/fields_presence/: index.html
features/filters_and_outputters/: index.html
features/input_parsing/: index.html
features/mounting_models_at_runtime/: index.html
features/multiline_input/: index.html
features/pipes/: index.html
features/shell_commands/: index.html
features/subshells_and_navigation/: index.html
picle/: __init__.py  cache.py  models.py  picle.py  utils.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/Getting Started/: index.html
site/api_reference/: index.html
site/assets/javascripts/: bundle.2b46852b.min.js  bundle.2b46852b.min.js.map
site/assets/javascripts/workers/: search.709b4209.min.js.map
site/assets/stylesheets/: main.1118c9be.min.css  main.1118c9be.min.css.map  palette.ba0d045b.min.css  palette.ba0d045b.min.css.map
site/changelog/: index.html
site/features/command_discovery/: index.html
site/features/configuration_model/: index.html
site/features/dynamic_dictionary_input/: index.html
site/features/field_aliases/: index.html
site/features/fields_presence/: index.html
site/features/input_parsing/: index.html
site/features/mounting_models_at_runtime/: index.html
site/features/multiline_input/: index.html
site/features/pipes/: index.html
site/features/processors/: index.html
site/features/result_specific_outputters/: index.html
site/features/subshells_and_navigation/: index.html
site/search/: search_index.json
test/: 1.txt  app_config.yaml.old2  app_config.yaml.old3  app_config.yaml.old5  config_app_example.py  docs_sample_app_1.py  example_app.py  example_chat_app.py  picle_test_shell.py  test_config_model.py  test_example_chat_app.py  test_example_config_app.py  test_picle.py  testing_app.py
