[tool.poetry]
name = "picle"
version = "0.7.3"
description = "Python Interactive Command Line Shells"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/picle"
repository = "https://github.com/dmulyalin/picle"
documentation = "https://dmulyalin.github.io/picle/"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = ">=2.0.1,<=3.0.0"
pyreadline3 = { version = "3.4.1", markers = "sys_platform == 'win32'" }

# docs dependencies
mkdocs = { version = "1.2.4", optional = true, markers = "python_version >= '3.7'" }
mkdocs-material = { version = "7.2.2", optional = true, markers = "python_version >= '3.7'" }
mkdocs-material-extensions = { version = "1.0.1", optional = true, markers = "python_version >= '3.7'" }
mkdocstrings = { version = "0.18.*", optional = true, markers = "python_version >= '3.7'", extras = ["python"] } 
pygments = { version = "2.11", optional = true, markers = "python_version >= '3.7'" }
pymdown-extensions = { version = "9.3", optional = true, markers = "python_version >= '3.7'" }

# optional dependencies for extras definition
rich = { version = ">=13.0.0,<=14.0.0", optional = true }

[tool.poetry.dev-dependencies]
black = "22.3.*"
pytest = { version = "7.1.*", markers = "python_version >= '3.7'" }
ipdb = ">=0.0.0, <=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "pygments",
    "pymdown-extensions",
]
full = [
	"rich"
]