[tool.poetry]
name = "picle"
version = "0.8.8"
description = "Python Interactive Command Line Shells"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/picle"
repository = "https://github.com/dmulyalin/picle"
documentation = "https://dmulyalin.github.io/picle/"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.0.1,<=3.0.0"
pyreadline3 = { version = "3.4.1", markers = "sys_platform == 'win32'" }

# optional dependencies for extras definition
rich = { version = ">=13.0.0,<=14.0.0", optional = true }

[tool.poetry.dev-dependencies]
black = { version = "24.10.0", markers = "python_version >= '3.9'" }
bandit = { version = "1.8.0", markers = "python_version >= '3.9'" }
flake8 = { version = "7.1.1", markers = "python_version >= '3.9'" }
pylint = { version = "3.3.3", markers = "python_version >= '3.9'" }
coverage = { version = "7.6.10", markers = "python_version >= '3.9'" }
pre-commit = "2.15.*"
pytest = { version = "7.1.*", markers = "python_version >= '3.7'" }
ipdb = ">=0.0.0, <=1.0.0"
invoke = "*"

# docs dependencies
mkdocs = "*" 
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocstrings = "*"
pygments = "*"
pymdown-extensions = "*"
mkdocstrings-python = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
full = [
	"rich"
]
