[tool.poetry]
name = "picle"
version = "0.10.0"
description = "Python Interactive Command Line Shells"
authors = ["Denis Mulyalin <d.mulyalin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmulyalin/picle"
repository = "https://github.com/dmulyalin/picle"
documentation = "https://dmulyalin.github.io/picle/"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2.0.1,<3.0.0"
pyreadline3 = { version = ">=3.4.1", markers = "sys_platform == 'win32'" }

# optional dependencies for extras definition
rich = { version = ">=13.0.0,<15.0.0", optional = true }
tabulate = { version = ">=0.9.0", optional = true }
pyyaml = { version = ">=6.0.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = { version = "*", markers = "python_version >= '3.10'" }
bandit = { version = "*", markers = "python_version >= '3.10'" }
flake8 = { version = "*", markers = "python_version >= '3.10'" }
pylint = { version = "*", markers = "python_version >= '3.10'" }
coverage = { version = "*", markers = "python_version >= '3.10'" }
pre-commit = "*"
pytest = { version = "*", markers = "python_version >= '3.10'" }
ipdb = "*"
invoke = "*"

# docs dependencies
mkdocs = "*" 
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocstrings = "*"
pygments = "*"
pymdown-extensions = "*"
mkdocstrings-python = "*"
griffe = "<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
full = [
	"rich",
	"tabulate",
	"pyyaml"
]

[tool.ruff.lint]
ignore = [
    "E712", # true-false-comparison
    "E722", # Do not use bare `except`
]

[tool.ruff.lint.isort]
case-sensitive = true